<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <EditText
        android:id="@+id/maxYvalue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/max_y_val"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/minYvalue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/min_Y_val"
        android:layout_marginTop="10dp"/>
    <CheckBox
        android:id="@+id/defaultCheckBox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/Default"
        android:layout_gravity="center"

        />

</LinearLayout>